--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "require": {
     "php": ">=5.3.0",
-    "ceus-media/common": "dev-master",
+    "ceus-media/common": ">=0.8.2",
     "michelf/php-markdown": "1.5.0"
   },
   "autoload": {
