--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "jabber": "ceus-media@jabber.org"
   },
   "require": {
-    "php": ">=5.3.0",
-    "ceus-media/common": ">=0.8.2",
+    "php": "^5.3.0 || ^7",
+    "ceus-media/common": "^0.8",
     "michelf/php-markdown": "1.5.0"
   },
   "autoload": {
