--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
   },
   "require": {
     "php": "^5.3.0 || ^7",
-    "ceus-media/common": "^0.8",
-    "michelf/php-markdown": "1.5.0"
+    "ceus-media/common": "^0.8"
   },
   "autoload": {
     "classmap": ["src/"]
