--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "php": "^5.3.0 || ^7",
     "ceus-media/common": "^0.8"
   },
+  "require-dev": {
+    "ceus-media/doc-creator": "*"
+  },
   "autoload": {
     "classmap": ["src/"]
   },
