--- a/hydrogen.ini
+++ b/hydrogen.ini
@@ -1,4 +1,5 @@
 [project]
 title				= "Hydrogen Framework"
-version				= "0.8.7"
+version				= "0.8.7.1"
 copyright			= "2007-2020 Ceus Media {@link https://ceusmedia.de/}"
+author				= "Christian Würker <christian.wuerker@ceusmedia.de>"
