--- a/hydrogen.ini
+++ b/hydrogen.ini
@@ -1,5 +1,5 @@
 [project]
 title				= "Hydrogen Framework"
-version				= "0.8.7.1"
+version				= "0.8.7.2a"
 copyright			= "2007-2020 Ceus Media {@link https://ceusmedia.de/}"
 author				= "Christian Würker <christian.wuerker@ceusmedia.de>"
