--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "jabber": "cwuerker@ceusmedia.de"
   },
   "require": {
-    "php": "^7.2",
+    "php": ">=7.2",
     "ceus-media/common": "^0.8 | dev-master"
   },
   "require-dev": {
