--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,16 +1,6 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Instantiated class View_ErrorException not found\\.$#"
-			count: 1
-			path: src/Application/Web/Site.php
-
-		-
-			message: "#^Instantiated class Model_Role not found\\.$#"
-			count: 1
-			path: src/Environment/Resource/Acl/Abstract.php
-
-		-
 			message: "#^Call to static method minifyController\\(\\) on an unknown class Model_Role_Right\\.$#"
 			count: 1
 			path: src/Environment/Resource/Acl/Database.php
@@ -21,12 +11,42 @@ parameters:
 			path: src/Environment/Resource/Acl/Database.php
 
 		-
+			message: "#^Call to method add\\(\\) on an unknown class Model_Role_Right\\.$#"
+			count: 1
+			path: src/Environment/Resource/Acl/Database.php
+
+		-
+			message: "#^Call to method getAllByIndex\\(\\) on an unknown class Model_Role_Right\\.$#"
+			count: 1
+			path: src/Environment/Resource/Acl/Database.php
+
+		-
 			message: "#^Instantiated class Model_Role not found\\.$#"
 			count: 1
 			path: src/Environment/Resource/Acl/Database.php
 
 		-
-			message: "#^Parameter \\$mail of method CMF_Hydrogen_Hook\\:\\:sendMail\\(\\) has invalid typehint type Mail_Abstract\\.$#"
+			message: "#^Call to method getAll\\(\\) on an unknown class Model_Role\\.$#"
 			count: 1
+			path: src/Environment/Resource/Acl/Database.php
+
+		-
+			message: "#^Call to method getAll\\(\\) on an unknown class Model_Role_Right\\.$#"
+			count: 1
+			path: src/Environment/Resource/Acl/Database.php
+
+		-
+			message: "#^Access to an undefined property object\\:\\:\\$isActive\\.$#"
+			count: 1
+			path: src/Environment/Resource/Module/Library/Local.php
+
+		-
+			message: "#^Access to an undefined property object\\:\\:\\$isActive\\.$#"
+			count: 1
+			path: src/Environment/Resource/Module/Library/Source.php
+
+		-
+			message: "#^Parameter \\$mail of method CMF_Hydrogen_Hook\\:\\:sendMail\\(\\) has invalid typehint type Mail_Abstract\\.$#"
+			count: 2
 			path: src/Hook.php
 
