--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
   "require-dev": {
     "ceus-media/doc-creator": "*",
     "phpunit/phpunit": "*",
-    "phpstan/phpstan": "*"
+    "phpstan/phpstan": "*",
+    "phpstan/phpstan-strict-rules": "*",
+    "php-parallel-lint/php-parallel-lint": "^1.3 | dev-master",
+    "rector/rector": "*"
   },
   "autoload": {
     "psr-4": {
@@ -36,46 +39,50 @@
   },
   "minimum-stability": "dev",
   "scripts": {
-    "install-dev": "composer install --dev --quiet",
-    "update-dev": "composer install --dev",
-    "dev-create-docs": [
-      "@install-dev",
-      "php vendor/ceus-media/doc-creator/doc-creator.php --config-file=tool/config/doc-creator.xml"
+    "dev:install": "composer install --dev --quiet",
+    "dev:update": "composer update --dev",
+    "incomplete:dev:create-docs": [
+      "@dev:install",
+      "php vendor/ceus-media/doc-creator/doc-creator.php --config-file=tool/config/doc.xml"
     ],
-    "dev-phpunit": [
+    "dev:phpunit": [
       "@install-dev",
-      "php vendor/bin/phpunit --configuration phpunit.xml --testsuite units"
+      "php vendor/bin/phpunit --configuration tool/config/phpunit9.xml --testsuite units"
     ],
-    "dev-phpstan": [
-      "@install-dev",
-      "vendor/bin/phpstan analyze --memory-limit=4G --verbose"
+    "dev:phpstan": [
+      "@dev:install",
+      "vendor/bin/phpstan analyze --configuration=tool/config/phpstan.neon --memory-limit=4G --xdebug --verbose"
     ],
-    "dev-phpstan-clear": [
-      "@install-dev",
+    "dev:phpstan-clear": [
+      "@dev:install",
       "vendor/bin/phpstan clear-cache --verbose"
     ],
-    "dev-phpstan-save": [
-      "@install-dev",
-      "vendor/bin/phpstan analyse --generate-baseline phpstan-baseline.neon --verbose"
+    "dev:phpstan-save": [
+      "@dev:install",
+      "vendor/bin/phpstan analyse --configuration tool/config/phpstan.neon --generate-baseline tool/config/phpstan-baseline.neon --verbose"
     ],
-    "dev-rector": [
-      "@install-dev",
-      "vendor/bin/rector process --config=tool/config/rector-rules.php --dry-run"
+    "dev:rector": [
+      "@dev:install",
+      "vendor/bin/rector process --config=tool/config/rector.php --dry-run"
     ],
-    "dev-rector-fix": [
-      "@install-dev",
-      "vendor/bin/rector process --config=tool/config/rector-rules.php"
+    "dev:rector-fix": [
+      "@dev:install",
+      "vendor/bin/rector process --config=tool/config/rector.php"
     ],
-    "dev-test-syntax": "php test/syntax.php"
+    "dev:test-syntax": [
+      "@dev:install",
+      "vendor/bin/parallel-lint src -j 1 --colors"
+    ]
   },
   "scripts-descriptions": {
-    "install-dev": "Installs project dependencies for Development stage",
-    "update-dev": "Updates project dependencies for Development stage",
-    "dev-phpunit": "Run unit tests",
-    "dev-phpstan": "Validate codebase with PHPStan",
-    "dev-phpstan-clear": "Clear PHPStan cache",
-    "dev-phpstan-save": "Store current results in ignore list",
-    "dev-rector": "Shows suggestions of configured Rector rules",
-    "dev-rector-fix": "Apply currently configured Rector rules to codebase",
-    "dev-test-syntax": "Validate code base syntax using PHP linter"
-  }}
+    "dev:install": "Installs project dependencies for Development stage",
+    "dev:update": "Updates project dependencies for Development stage",
+    "dev:unit": "Run unit tests",
+    "dev:phpstan": "Validate codebase with PHPStan",
+    "dev:phpstan-clear": "Clear PHPStan cache",
+    "dev:phpstan-save": "Store current results in ignore list",
+    "dev:rector": "Shows suggestions of configured Rector rules",
+    "dev:rector-fix": "Apply currently configured Rector rules to codebase",
+    "dev:test-syntax": "Validate code base syntax using PHP linter"
+  }
+}
