--- a/tool/config/phpstan.neon
+++ b/tool/config/phpstan.neon
@@ -6,7 +6,7 @@ parameters:
 	phpVersion: 70400
 	level: 5
 	paths:
-		- src/
+		- ../../src/
 	checkMissingIterableValueType: false
 	treatPhpDocTypesAsCertain: false
 	reportUnmatchedIgnoredErrors: true
