--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,17 +1,6 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Call to static method minifyController\\(\\) on an unknown class Model_Role_Right\\.$#"
-			count: 1
-			path: src/Environment/Resource/Acl/Database.php
-
-		-
-			message: "#^Instantiated class Model_Role not found\\.$#"
-			count: 1
-			path: src/Environment/Resource/Acl/Database.php
-
-		-
-			message: "#^Instantiated class Model_Role_Right not found\\.$#"
-			count: 3
-			path: src/Environment/Resource/Acl/Database.php
-
+			message: "#^PHPDoc tag @throws with type Psr\\\\SimpleCache\\\\InvalidArgumentException is not subtype of Throwable$#"
+			count: 2
+			path: src/Environment/Resource/Module/Library/Source.php
