--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,7 +3,8 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
-	level: 1
+	phpVersion: 70400
+	level: 4
 	paths:
 		- src/
 	checkMissingIterableValueType: false
