--- a/tool/config/phpstan-baseline.neon
+++ b/tool/config/phpstan-baseline.neon
@@ -4,3 +4,8 @@ parameters:
 			message: "#^Parameter \\#1 \\$key of method CeusMedia\\\\Common\\\\Net\\\\HTTP\\\\Reader\\:\\:getCurlInfo\\(\\) expects string\\|null, int given\\.$#"
 			count: 1
 			path: ../../src/Environment/Resource/Module/Library/Source.php
+
+		-
+			message: "#^Property CeusMedia\\\\HydrogenFramework\\\\Model\\\\REST\\\\JSON\\:\\:\\$client has no type specified\\.$#"
+			count: 1
+			path: ../../src/Model/REST/JSON.php
