--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,14 @@
     "ext-pdo": "*",
     "ceus-media/cache": "*",
     "ceus-media/common": "0.9.x-dev",
-    "ceus-media/database": "* | dev-master"
+    "ceus-media/database": "0.5.x-dev",
+    "ceus-media/template-engine": "dev-master"
   },
   "require-dev": {
     "ceus-media/doc-creator": "*",
-    "phpunit/phpunit": "*",
-    "phpstan/phpstan": "*",
-    "phpstan/phpstan-strict-rules": "*",
+    "phpunit/phpunit": "^9",
+    "phpstan/phpstan": "^1",
+    "phpstan/phpstan-strict-rules": "^1",
     "php-parallel-lint/php-parallel-lint": "^1.3 | dev-master",
     "rector/rector": "*"
   },
@@ -39,38 +40,37 @@
   },
   "minimum-stability": "dev",
   "scripts": {
-    "dev:install": "composer install --quiet",
+    "dev:install-quiet": "composer install --quiet",
     "dev:update": "composer update",
     "incomplete:dev:create-docs": [
-      "@dev:install",
+      "@dev:install-quiet",
       "php vendor/ceus-media/doc-creator/doc-creator.php --config-file=tool/config/doc.xml"
     ],
     "dev:phpunit": [
-      "@install-dev",
+      "@dev:install-quiet",
       "php vendor/bin/phpunit --configuration tool/config/phpunit9.xml --testsuite units"
     ],
     "dev:phpstan": [
-      "@dev:install",
       "vendor/bin/phpstan analyze --configuration=tool/config/phpstan.neon --memory-limit=4G --xdebug --verbose"
     ],
     "dev:phpstan-clear": [
-      "@dev:install",
+      "@dev:install-quiet",
       "vendor/bin/phpstan clear-cache --verbose"
     ],
     "dev:phpstan-save": [
-      "@dev:install",
+      "@dev:install-quiet",
       "vendor/bin/phpstan analyse --configuration tool/config/phpstan.neon --generate-baseline tool/config/phpstan-baseline.neon --verbose"
     ],
     "dev:rector": [
-      "@dev:install",
+      "@dev:install-quiet",
       "vendor/bin/rector process --config=tool/config/rector.php --dry-run"
     ],
     "dev:rector-fix": [
-      "@dev:install",
+      "@dev:install-quiet",
       "vendor/bin/rector process --config=tool/config/rector.php"
     ],
     "dev:test-syntax": [
-      "@dev:install",
+      "@dev:install-quiet",
       "vendor/bin/parallel-lint src -j 1 --colors"
     ]
   },
