--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     "jabber": "cwuerker@ceusmedia.de"
   },
   "require": {
-    "php": ">=7.4",
+    "php": "^7.4 | ^8",
     "ext-json": "*",
     "ext-pdo": "*",
     "ceus-media/cache": "*",
-    "ceus-media/common": "0.9.x-dev",
-    "ceus-media/database": "0.5.x-dev",
+    "ceus-media/common": "^0.9 | ^1.0 | 0.9.x-dev | 1.0.x-dev",
+    "ceus-media/database": "^0.5 | ^0.6 | 0.5.x-dev | 0.6.x-dev",
     "ceus-media/template-engine": "dev-master"
   },
   "require-dev": {
