--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "ext-json": "*",
     "ext-pdo": "*",
     "ceus-media/cache": "*",
-    "ceus-media/common": "^0.9 | ^1.0 | 0.9.x-dev | 1.0.x-dev",
+    "ceus-media/common": "^1.0 | 1.0.x-dev | ^0.9 | 0.9.x-dev",
     "ceus-media/database": "^0.5 | ^0.6 | 0.5.x-dev | 0.6.x-dev",
     "ceus-media/template-engine": "dev-master"
   },
