--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,14 @@
     "jabber": "cwuerker@ceusmedia.de"
   },
   "require": {
-    "php": "^7.4 | ^8",
+    "php": "^8",
     "ext-json": "*",
     "ext-pdo": "*",
-    "ceus-media/cache": "*",
+    "ceus-media/cache": "^0.5 | 0.5.x-dev",
     "ceus-media/common": "^1.0 | 1.0.x-dev | ^0.9 | 0.9.x-dev",
-    "ceus-media/database": "^0.5 | ^0.6 | 0.5.x-dev | 0.6.x-dev",
-    "ceus-media/template-engine": "dev-master"
+    "ceus-media/database": "^0.6 | 0.6.x-dev",
+    "ceus-media/template-engine": "dev-master",
+    "psr/log": "^3 | 3.x-dev"
   },
   "require-dev": {
     "ceus-media/doc-creator": "*",
