--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "ceus-media/cache": "*",
     "ceus-media/common": "^1.0 | 1.0.x-dev | ^0.9 | 0.9.x-dev",
     "ceus-media/database": "^0.5 | ^0.6 | 0.5.x-dev | 0.6.x-dev",
-    "ceus-media/template-engine": "dev-master"
+"ceus-media/template-engine": "^0.5 | 0.5.x-dev | ^0.4 | 0.4.x-dev"
   },
   "require-dev": {
     "ceus-media/doc-creator": "*",
