Allow object as message on log resource.

--- a/tool/config/phpstan.neon
+++ b/tool/config/phpstan.neon
@@ -18,5 +18,6 @@ parameters:
 	treatPhpDocTypesAsCertain: false
 	reportUnmatchedIgnoredErrors: true
 	ignoreErrors:
-		- identifier: missingType.iterableValue
+		-
+			identifier: missingType.iterableValue
 
