--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   },
   "require-dev": {
     "ceus-media/doc-creator": "^1.0 | 1.0.x-dev",
-    "phpunit/phpunit": "^9 | ^10",
+    "phpunit/phpunit": "^10",
     "phpstan/phpstan": "^1",
     "phpstan/phpstan-strict-rules": "^1",
     "php-parallel-lint/php-parallel-lint": "^1.3 | dev-master",
