--- a/test/assets/app/config/config.ini
+++ b/test/assets/app/config/config.ini
@@ -1,3 +1,8 @@
 app.title			= "Test: Cli: App: Hello"
 app.base.url		= "https://example.org/demo/cli/App/Hello/"
 app.mode			= "test"
+
+locale.allowed			= "de"
+locale.default			= "de"
+
+path.locales            = "contents/locales/"
