Update composer file: Fix package versions for against 1.0.x-dev.

--- a/tool/config/phpstan.neon
+++ b/tool/config/phpstan.neon
@@ -18,6 +18,5 @@ parameters:
 	treatPhpDocTypesAsCertain: false
 	reportUnmatchedIgnoredErrors: true
 	ignoreErrors:
-		-
-			identifier: missingType.iterableValue
+		- identifier: missingType.iterableValue
 
