--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,19 @@
     "ext-json": "*",
     "ext-pdo": "*",
     "ext-simplexml": "*",
-    "ceus-media/cache": "^0.6 | 0.6.x-dev | ^0.5 | 0.5.x-dev",
-    "ceus-media/common": "^1.0 | 1.0.x-dev",
-    "ceus-media/database": "^0.6 | 0.6.x-dev",
-    "ceus-media/template-engine": "^0.5 | 0.5.x-dev",
+    "ceus-media/cache": "0.6.* | 0.6.x-dev",
+    "ceus-media/common": "1.0.* | 1.0.x-dev",
+    "ceus-media/database": "0.6.* | 0.6.x-dev",
+    "ceus-media/template-engine": "0.5.* | 0.5.x-dev",
     "psr/log": "^3 | 3.x-dev"
   },
   "require-dev": {
-    "ceus-media/doc-creator": "^1.0 | 1.0.x-dev",
-    "phpunit/phpunit": "^10",
-    "phpstan/phpstan": "^1",
-    "phpstan/phpstan-strict-rules": "^1",
-    "php-parallel-lint/php-parallel-lint": "^1.3 | dev-master",
-    "rector/rector": "*"
+    "ceus-media/doc-creator": "1.0.* | 1.0.x-dev",
+    "phpunit/phpunit": "10.*",
+    "phpstan/phpstan": "1.*",
+    "phpstan/phpstan-strict-rules": "1.*",
+    "php-parallel-lint/php-parallel-lint": "1.*",
+    "rector/rector": "1.*"
   },
   "autoload": {
     "psr-4": {
