Update badges in readme file and remove PHPUnit config files for v 8 & 9

--- a/composer.json
+++ b/composer.json
@@ -45,13 +45,9 @@
   "scripts": {
     "dev:install-quiet": "composer install --quiet",
     "dev:update": "composer update",
-    "incomplete:dev:create-docs": [
-      "@dev:install-quiet",
+    "dev:create-docs": [
+      "@dev:install",
       "php vendor/ceus-media/doc-creator/doc-creator.php --config-file=tool/config/doc.xml"
-    ],
-    "dev:phpunit": [
-      "@dev:install-quiet",
-      "XDEBUG_MODE=coverage php vendor/bin/phpunit --configuration tool/config/phpunit.xml --testsuite units"
     ],
     "dev:phpstan": [
       "vendor/bin/phpstan analyze --configuration=tool/config/phpstan.neon --memory-limit=1G --verbose"
@@ -63,6 +59,14 @@
     "dev:phpstan-save": [
       "@dev:install-quiet",
       "vendor/bin/phpstan analyse --configuration tool/config/phpstan.neon --generate-baseline tool/config/phpstan-baseline.neon --verbose"
+    ],
+    "dev:phpunit": [
+      "@dev:install-quiet",
+      "XDEBUG_MODE=debug php vendor/bin/phpunit --configuration tool/config/phpunit.xml --testsuite units --no-coverage --no-logging 2>&1"
+    ],
+    "dev:phpunit-coverage": [
+      "@dev:install-quiet",
+      "XDEBUG_MODE=coverage php vendor/bin/phpunit --configuration tool/config/phpunit.xml --testsuite units"
     ],
     "dev:rector": [
       "@dev:install-quiet",
